--- a/Main.html
+++ b/Main.html
@@ -4,9 +4,9 @@
 		<canvas width="960px" height="540" id="game"></canvas>
 		<script type="text/javascript" src="game.js"></script>
 		<article class="content">
-			<h1 class="title"><span>C</span><span>o</span><span>l</span><span>o</span><span>r</span><span> </span><span>B</span><span>l</span><span>a</span><span>s</span><span>t</span></h1>
+			<h1 class="title"><span>S</span><span>H</span><span>O</span><span>O</span><span>T</span></h1>
 
-			<p>Use the <code>Left</code> and <code>Right</code> Arrows or <code>A</code> and <code>D</code> keys to move, <code>Spacebar</code> to shoot.</p>
+			<p>상하 좌우 키로 움직이며 , 스페이스바로 발사 할수 있습니다.</p>
 		</article>
 	</div>
 </div>
