--- a/Main.html
+++ b/Main.html
@@ -1,12 +1,10 @@
 <link rel="stylesheet" type="text/css" href="game.css">
 <div class="container">
 	<div class="game-wrap">
-		<canvas width="960px" height="540" id="game"></canvas>
+		<canvas width="1000px" height="500" id="game"></canvas>
 		<script type="text/javascript" src="game.js"></script>
-		<article class="content">
-			<h1 class="title"><span>S</span><span>H</span><span>O</span><span>O</span><span>T</span></h1>
-
-			<p>상하 좌우 키로 움직이며 , 스페이스바로 발사 할수 있습니다.</p>
+		<article class="intro">
+			<h1 class="title">CONTROL : WASD , SHOOT : SPACE , BOMB : SHIFT</h1>
 		</article>
 	</div>
 </div>
