--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class="game-wrap">
 		<canvas width="1000px" height="500" id="game"></canvas>
-		<script type="text/javascript" src="game.js"></script>
+		<script type="text/javascript" src="Game.js"></script>
 		<article class="intro">
 			<h1 class="title">CONTROL : WASD , SHOOT : SPACE , BOMB : SHIFT</h1>
 		</article>
