--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             }
         },
     //눌린상태
-        keyPressed: function(e){            
-            if(e.keyCode === 32){
+        keyPressed: function(k){            
+            if(k.keyCode === 32){
                 if(!Game.player.invincible  && !Game.oneShot){
                     Game.player.shoot();
                     Game.oneShot = true;
@@ -103,59 +103,59 @@
                 if(Game.isGameOver){
                     Game.init();
                 }
-          e.preventDefault();
+          k.preventDefault();
             }
         },
         //뗏다
-        buttonUp: function(e){
-            if(e.keyCode === 32){
+        buttonUp: function(k){
+            if(k.keyCode === 32){
                 Game.shooting = false;
                 Game.oneShot = false;
-            e.preventDefault();
+        ke.preventDefault();
             }
-            if(e.keyCode === 37 || e.keyCode === 65){
+            if( k.keyCode === 65){
                 Game.player.movingLeft = false;
             }
-            if(e.keyCode === 38 || e.keyCode === 87){
+            if( k.keyCode === 87){
                 Game.player.movingUp = false;
             }
-            if(e.keyCode === 39 || e.keyCode === 68){
+            if( k.keyCode === 68){
                 Game.player.movingRight = false;
             }
-            if(e.keyCode === 40 || e.keyCode === 83){
+            if( k.keyCode === 83){
                 Game.player.movingDown = false;
             }
 
         },
         //눌렀다
-        buttonDown: function(e){
-            if(e.keyCode === 32){
+        buttonDown: function(k){
+            if(k.keyCode === 32){
                 Game.shooting = true;
             }
             //폭탄키 쉬프트
-            if(e.keyCode === 16 && Game.bomb>0){
+            if(k.keyCode === 16 && Game.bomb>0){
                 Game.bomb--;
                 for(var i in Game.enemies){     
                     Game.enemies[i].Colid=1;               
                     Game.enemies[i].die();
                 }
                 Game.invincibleMode(2500);
-                e.preventDefault();
+                k.preventDefault();
             }
             //좌, a
-            if(e.keyCode === 37 || e.keyCode === 65){
+            if( k.keyCode === 65){
                 Game.player.movingLeft = true;
             }
             //위, w
-            if(e.keyCode === 38 || e.keyCode === 87){
+            if( k.keyCode === 87){
                 Game.player.movingUp = true;
             }
             //우, d
-            if(e.keyCode === 39 || e.keyCode === 68){
+            if( k.keyCode === 68){
                 Game.player.movingRight = true;
             }
             //아래, s
-            if(e.keyCode === 40 || e.keyCode === 83){
+            if( k.keyCode === 83){
                 Game.player.movingDown = true;
             }
         },
@@ -235,12 +235,8 @@
           this.ctx.fillText("Score: " + Game.score, 8, 20);
           this.ctx.fillText("Lives: " + (Game.maxLives - Game.life), 8, 40);
           this.ctx.fillText("Bomb: " + Game.bomb, 8, 60);
-          this.ctx.fillText("HP: " + hp, 8, 80);
-          this.ctx.fillText("Max: " + Game.maxEnemies, 8, 100);
-          this.ctx.fillText("Alive: " + Game.enemiesAlive, 8, 120);
-          this.ctx.fillText("RoundCount: " + RoundCount, 8, 140);
           this.ctx.font = "40px Lato, sans-serif";
-          if(this.score>200 && RoundCount==0){
+          if(this.score>1000 && RoundCount==0){
             RoundCount=1;
             Round=2;              
             Game.maxEnemies=9;
@@ -253,7 +249,7 @@
                 }
             }
           }
-          else if(this.score>1000 && RoundCount==1){
+          else if(this.score>2000 && RoundCount==1){
             RoundCount=2;
             Round=3;                 
             for(var i in Game.enemies){
@@ -291,7 +287,7 @@
                     }                    
                 }
                 Game.ctx.fillText("Boss Round",400,50);
-                for(var i = 1 ; i<= hp/50 ; i++){
+                for(var i = 0 ; i<= hp/50 ; i++){
                     this.ctx.fillText("ㅁ",20*i,10);
                 }
             }
@@ -435,9 +431,9 @@
         Game.bullets[Game.bulletIndex] = new Bullet(this.x + this.width/2+ 5,this.y+this.height/2);
         Game.bulletIndex++; 
         }
-        else if(  power == 3){
+        if(  power == 3){
             Game.bullets[Game.bulletIndex] = new Bullet(this.x + this.width/2- 5,this.y+this.height/2);
-        Game.bulletIndex++; 
+            Game.bulletIndex++; 
         }
     };
     
