--- a/index.html
+++ b/index.html
@@ -257,21 +257,19 @@
                                 clear = 1;
                                 Game.gameOver();
                             }
-                            if (Game.score > 1000 && RoundCount == 0) {//1천점 이상시 2라운드
+                            if (Game.score > 1000 && RoundCount == 0 && Round== 1) {//1천점 이상시 2라운드
                                 RoundCount = 1;
                                 Round = 2;
                                 Game.maxEnemies = 9;
                                 for (var i = 0; i < 3; i++) {
                                     if (Game.enemiesAlive < Game.maxEnemies) {
                                         setTimeout(function () {
-                                            new Enemy();
-                                            
-                                        }, 2000);
-                                        
+                                            new Enemy();                                            
+                                        }, 2000);                                        
                                     }
                                 }
                             }
-                            else if (Game.score > 2500 && RoundCount == 1) { // 보스라운드 진입
+                            else if (Game.score > 2500 && RoundCount == 1 && Round==2) { // 보스라운드 진입
                                 RoundCount = 2;
                                 Round = 3;
                                 for (var i in Game.enemies) {
@@ -394,7 +392,7 @@
                         Game.life++;
                         power = 1;
                         kill = 0;
-                        Game.bomb = 3;
+                        Game.bomb = 2;
                     } else {
                         Game.pause();
                         Game.gameOver();
@@ -482,7 +480,8 @@
 
                 //적 생성
                 var Enemy = function () {
-
+                    Game.enemiesAlive++;
+                    this.enemiescount=0;
                     this.width = 30;
                     this.height = 30;
                     this.x = Game.random(0, (Game.c.width - this.width));
@@ -495,9 +494,12 @@
                     this.movingLeft = Math.random() < 0.5 ? true : false;
                     this.color = "hsl(" + Game.random(0, 360) + ", 60%, 50%)";
                     Game.enemies[Game.enemyIndex] = this;
-                    Game.enemyIndex++;
-                    Game.enemiesAlive++;
-                    if(Game.enemiesAlive>Game.maxEnemies)this.die();
+                    Game.enemyIndex++;                    
+                    for( var i  in Game.enemies){
+                        this.enemiescount++;
+                        if(this.enemiescount>Game.maxEnemies)
+                            Game.enemies[i].die();
+                    }
                 };
 
 
@@ -633,7 +635,7 @@
                     this.x = Game.random(0, (Game.c.width - this.width));
                     this.y = 0
                     this.vy = 0.3;
-                    hp = 2000;
+                    hp = 100;
                     this.speed = 1;
                     this.shootingSpeed = 60;
                     this.movingLeft = Math.random() < 0.5 ? true : false;
